...
            "Gift Details",
            style: TextStyle(fontSize: 25),
          ),
        ),
      ),
      body: ListView(
        key: Key('GiftDetailsListView'),
        padding: const EdgeInsets.all(20),
        children: [
          Container(
            width: 250,
            height: 300,
            decoration: BoxDecoration(
...

          if ((!widget.isOwner && widget.isPledger) || (!widget.isOwner && !widget.isPledged))
            Row(
              children: [
                Expanded(
                  child: ElevatedButton(
                    key: Key('PledgeButton'),
                    onPressed: isloading ? null :  ()async{
                      if(isOnline) {
                        isloading = true;
                        setState(() {});
                        _togglePledge();
                        Event? e = await controller.PledgedButtonPressed(widget
...
